feat: Added dummy admin panel with simple item creator (+ small ui/code refactoring)

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,5 +1,35 @@
 {
+    "itemTypes.necklace": "necklace",
+    "itemTypes.gloves": "gloves",
+    "itemTypes.ring": "ring",
+    "itemTypes.cape": "cape",
+    "itemTypes.belt": "belt",
+    "itemTypes.fly": "fly",
+    "itemTypes.book": "book",
+    "itemTypes.bag": "bag",
+    "itemTypes.fairy": "fairy",
+    "itemTypes.star": "star",
+    "itemTypes.helmet": "helmet",
+    "itemTypes.armor": "armor",
+    "itemTypes.pants": "pants",
+    "itemTypes.shoes": "shoes",
+    "itemTypes.trinket": "trinket",
+    "itemTypes.weapon": "weapon",
+    "itemTypes.ammo": "ammo",
     "itemSelector.title": "Select an item",
     "itemSelector.save": "save",
-    "itemSelector.nameLabel": "Req. lvl or name"
+    "itemSelector.nameLabel": "Req. lvl or name",
+    "itemCreator.title": "Create item",
+    "itemCreator.nameLabel": "Name",
+    "itemCreator.typeLabel": "Type",
+    "itemCreator.subtypeLabel": "Subtype",
+    "itemCreator.lvlLabel": "Lvl",
+    "itemCreator.requiredLvlLabel": "Level required",
+    "itemCreator.requiredStrLabel": "Str required",
+    "itemCreator.physDefLabel": "Physical resistance",
+    "itemCreator.metalDefLabel": "Metal resistance",
+    "itemCreator.woodDefLabel": "Wood resistance",
+    "itemCreator.waterDefLabel": "Water resistance",
+    "itemCreator.fireDefLabel": "Fire resistance",
+    "itemCreator.earthDefLabel": "Earth resistance"
 }
